package code;

public enum COLOR {
    RED, GREEN, YELLOW, BLUE, BLACK
}
